// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultSection renders with shouldAlertFailureCount = <false> 1`] = `
<DocumentFragment>
  <div
    class="result-section-class-name resultSection"
    data-automation-id="result-section"
  >
    <mock-headingelementforlevel
      headinglevel="2"
    >
      <span
        class="resultSectionTitle"
      >
        <span
          class="screen-reader-only"
        >
           
        </span>
        <span
          aria-hidden="true"
          class="title"
        />
        <span
          aria-hidden="true"
          class="outcomeChipContainer"
        >
          <mock-outcomechip />
        </span>
      </span>
    </mock-headingelementforlevel>
    <mock-resultsectioncontent
      containerclassname="result-section-class-name"
      deps="[object Object]"
      headinglevel="3"
      sectionheadinglevel="2"
      shouldalertfailurescount="false"
    />
  </div>
</DocumentFragment>
`;

exports[`ResultSection renders with shouldAlertFailureCount = <false>: ResultSectionContent props 1`] = `
{
  "containerClassName": "result-section-class-name",
  "deps": {
    "getNextHeadingLevel": [Function],
  },
  "headingLevel": 3,
  "sectionHeadingLevel": 2,
  "shouldAlertFailuresCount": false,
}
`;

exports[`ResultSection renders with shouldAlertFailureCount = <true> 1`] = `
<DocumentFragment>
  <div
    class="result-section-class-name resultSection"
    data-automation-id="result-section"
  >
    <mock-headingelementforlevel
      headinglevel="2"
    >
      <span
        class="resultSectionTitle"
      >
        <span
          class="screen-reader-only"
        >
           
          <span
            role="alert"
          >
             failures were detected.
          </span>
        </span>
        <span
          aria-hidden="true"
          class="title"
        />
        <span
          aria-hidden="true"
          class="outcomeChipContainer"
        >
          <mock-outcomechip />
        </span>
      </span>
    </mock-headingelementforlevel>
    <mock-resultsectioncontent
      containerclassname="result-section-class-name"
      deps="[object Object]"
      headinglevel="3"
      sectionheadinglevel="2"
      shouldalertfailurescount="true"
    />
  </div>
</DocumentFragment>
`;

exports[`ResultSection renders with shouldAlertFailureCount = <true>: ResultSectionContent props 1`] = `
{
  "containerClassName": "result-section-class-name",
  "deps": {
    "getNextHeadingLevel": [Function],
  },
  "headingLevel": 3,
  "sectionHeadingLevel": 2,
  "shouldAlertFailuresCount": true,
}
`;

exports[`ResultSection renders with shouldAlertFailureCount = <undefined> 1`] = `
<DocumentFragment>
  <div
    class="result-section-class-name resultSection"
    data-automation-id="result-section"
  >
    <mock-headingelementforlevel
      headinglevel="2"
    >
      <span
        class="resultSectionTitle"
      >
        <span
          class="screen-reader-only"
        >
           
        </span>
        <span
          aria-hidden="true"
          class="title"
        />
        <span
          aria-hidden="true"
          class="outcomeChipContainer"
        >
          <mock-outcomechip />
        </span>
      </span>
    </mock-headingelementforlevel>
    <mock-resultsectioncontent
      containerclassname="result-section-class-name"
      deps="[object Object]"
      headinglevel="3"
      sectionheadinglevel="2"
    />
  </div>
</DocumentFragment>
`;

exports[`ResultSection renders with shouldAlertFailureCount = <undefined>: ResultSectionContent props 1`] = `
{
  "containerClassName": "result-section-class-name",
  "deps": {
    "getNextHeadingLevel": [Function],
  },
  "headingLevel": 3,
  "sectionHeadingLevel": 2,
  "shouldAlertFailuresCount": undefined,
}
`;
